--- a/src/app/rappels/rappels.component.html
+++ b/src/app/rappels/rappels.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="mb-3">
           <label for="elt" class="form-label">Description</label>
-          <textarea class="form-control" name="des" [(ngModel)]="rappel.titre"  id="des" >
+          <textarea class="form-control" name="des" [(ngModel)]="rappel.description"  id="des" >
             </textarea>
         </div>
         <div class="mb-3">
@@ -51,7 +51,7 @@
     <tr *ngFor="let rp of rappelList;let i=index">
       <td>{{rp.titre}}</td>
       <td>{{rp.date}}</td>
-      <td><a routerLink="/{{i}}">voir détailles</a></td>
+      <td><a routerLink="{{i}}">voir détailles</a></td>
 
     </tr>
   </tbody>
